# luz_informer_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: dev-env.mdc
config/: settings.py
docs/: README.md  comandos.md  configuracion.md  desarrollo.md
docs/arquitectura/: README.md  alertas.md  flujo-alertas.md  flujo-ask.md  flujo-comandos-precios.md  scheduler.md
scripts/: init_db.py
src/: main.py
src/llm/: client.py
src/precios/: models.py  tarifaluzhora.py
src/scheduler/: alertas_ia.py  jobs.py
src/storage/: repository.py
src/telegram_bot/: alerts.py  handlers.py  keyboards.py  logging_middleware.py
tests/: conftest.py  test_precios.py  test_settings.py  test_storage.py
